raffia/tests/error/value/calc/hash.snap
---
source: raffia/tests/error.rs
---
error: component value is expected
  ┌─ hash.css:1:12
  │
1 │ a {b: calc(#)}
  │            ^


